# fcl_capsule

./: CMakeLists.txt  fcl_capsule.pc  package.xml
include/fcl/: config.h
include/fcl_capsule/: collision.h  collision_data.h  collision_func_matrix.h  collision_node.h  collision_object.h  continuous_collision.h  data_types.h  distance.h  distance_func_matrix.h  exception.h  intersect.h  octree.h  profile.h
include/fcl_capsule/BV/: AABB.h  BV.h  BV_node.h  OBB.h  OBBRSS.h  RSS.h  kDOP.h  kIOS.h
include/fcl_capsule/BVH/: BVH_front.h  BVH_internal.h  BVH_model.h  BVH_utility.h  BV_fitter.h  BV_splitter.h
include/fcl_capsule/articulated_model/: joint.h  joint_config.h  link.h  model.h  model_config.h
include/fcl_capsule/broadphase/: broadphase.h  broadphase_SSaP.h  broadphase_SaP.h  broadphase_bruteforce.h  broadphase_dynamic_AABB_tree.h  broadphase_dynamic_AABB_tree_array.h  broadphase_interval_tree.h  broadphase_spatialhash.h  broadphase_spatialhash.hxx  hash.h  hierarchy_tree.h  hierarchy_tree.hxx  interval_tree.h  morton.h
include/fcl_capsule/ccd/: conservative_advancement.h  interval.h  interval_matrix.h  interval_vector.h  motion.h  motion_base.h  taylor_matrix.h  taylor_model.h  taylor_vector.h
include/fcl_capsule/ccd/interpolation/: interpolation.h  interpolation_factory.h  interpolation_linear.h
include/fcl_capsule/knn/: greedy_kcenters.h  nearest_neighbors.h  nearest_neighbors_GNAT.h  nearest_neighbors_flann.h  nearest_neighbors_linear.h  nearest_neighbors_sqrtapprox.h
include/fcl_capsule/learning/: classifier.h
include/fcl_capsule/math/: math_details.h  matrix_3f.h  sampling.h  transform.h  vec_3f.h  vec_nf.h
include/fcl_capsule/narrowphase/: gjk.h  gjk_libccd.h  narrowphase.h
include/fcl_capsule/shape/: geometric_shape_to_BVH_model.h  geometric_shapes.h  geometric_shapes_utility.h
include/fcl_capsule/simd/: math_simd_details.h  simd_intersect.h
include/fcl_capsule/traversal/: traversal_node_base.h  traversal_node_bvh_shape.h  traversal_node_bvhs.h  traversal_node_octree.h  traversal_node_setup.h  traversal_node_shapes.h  traversal_recurse.h
src/: CMakeLists.txt  collision.cpp  collision_data.cpp  collision_func_matrix.cpp  collision_node.cpp  continuous_collision.cpp  distance.cpp  distance_func_matrix.cpp  intersect.cpp  profile.cpp
src/BV/: AABB.cpp  OBB.cpp  OBBRSS.cpp  RSS.cpp  kDOP.cpp  kIOS.cpp
src/BVH/: BVH_model.cpp  BVH_utility.cpp  BV_fitter.cpp  BV_splitter.cpp
src/articulated_model/: joint.cpp  joint_config.cpp  link.cpp  model.cpp  model_config.cpp
src/broadphase/: broadphase_SSaP.cpp  broadphase_SaP.cpp  broadphase_bruteforce.cpp  broadphase_dynamic_AABB_tree.cpp  broadphase_dynamic_AABB_tree_array.cpp  broadphase_interval_tree.cpp  broadphase_spatialhash.cpp  hierarchy_tree.cpp  interval_tree.cpp
src/ccd/: conservative_advancement.cpp  interval.cpp  interval_matrix.cpp  interval_vector.cpp  motion.cpp  taylor_matrix.cpp  taylor_model.cpp  taylor_vector.cpp
src/ccd/interpolation/: interpolation.cpp  interpolation_factory.cpp  interpolation_linear.cpp
src/math/: sampling.cpp  transform.cpp
src/narrowphase/: gjk.cpp  gjk_libccd.cpp  narrowphase.cpp
src/shape/: geometric_shapes.cpp  geometric_shapes_utility.cpp
src/traversal/: traversal_node_base.cpp  traversal_node_bvhs.cpp  traversal_node_setup.cpp  traversal_recurse.cpp
test/: general_test.cpp  libsvm_classifier.h  test_fcl_broadphase.cpp  test_fcl_capsule_capsule.cpp  test_fcl_collision.cpp  test_fcl_distance.cpp  test_fcl_frontlist.cpp  test_fcl_geometric_shapes.cpp  test_fcl_math.cpp  test_fcl_octomap.cpp  test_fcl_shape_mesh_consistency.cpp  test_fcl_simple.cpp  test_fcl_sphere_capsule.cpp  test_fcl_utility.cpp  test_fcl_utility.h
test/fcl_resources/: config.h
