<?xml version="1.0"?>
<package>
  <name>fcl_capsule</name>
  <version>0.1.0</version>
  <description>The fcl_capsule package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>BSD</license>

  <author email="k@rst.en">Karsten</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>octomap</build_depend>
  <build_depend>libccd</build_depend>

  <run_depend>octomap</run_depend>
  <run_depend>libccd</run_depend>
</package>
